ingres/old/apache-pod.yaml
apiVersion: v1
kind: Pod
apiVersion: v1
kind: Pod
metadata:
  name: apache-pod
  labels:
    app: apache-web
spec:
  containers:
  - name: apache
    image: ubuntu:latest
    ports:
    - containerPort: 80
    command:
      - bash
      - -c
      - "apt-get update && apt-get install -y apache2 && apache2ctl -D FOREGROUND"
    volumeMounts:
    - mountPath: /usr/local/apache2/htdocs
      name: nfs-volume
      subPath: apache
  volumes:
  - name: nfs-volume
    persistentVolumeClaim:
      claimName: nfs-pvc
