ingres/old/nfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web # Asegúrate de que ambos pods (Nginx y Apache) tengan la misma etiqueta
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
